[package]
name = "mesago-centro"
version = "0.1.0"
authors = ["Itsusinn <itsusinn@foxmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# network
actix = "0.10.0"
actix-codec = "0.3"
actix-web = "3"
actix-web-actors = "3"
actix-files = "0.3.0"
awc = "2"

#async
async-channel = "1.6.1"

#logging
env_logger = "0.8"
futures = "0.3.1"
bytes = "1.0.1"

anyhow="1.0"